src/objects/GVS_Picklist__c.object
<CustomObject>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GlobalValueSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Value Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GVS - Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GVS - Picklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>